@@ -9,4 +9,4 @@ ENV TZ=America/Sao_Paulo
 WORKDIR /app
 COPY --from=build /app/build/libs/gateway-1.0.0.jar /app/app.jar
 EXPOSE 8080
-CMD ["java", "-jar", "/app/app.jar"]
+CMD ["java","-Xms128M", "-Xmx512M", "-XX:+UseZGC", "-jar", "/app/app.jar"]
